--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,5 +9,4 @@ services:
     working_dir: /var/www/html
     ports:
       - 8000:8000
-    command: >
-      sh -c "composer create-project laravel/laravel . && php artisan serve --host=0.0.0.0 --port=8000"
+    tty: true
